# gtsam_data_examples

./: .gitignore  CMakeLists.txt  README.md
custom_factors/: ImageRotationFactor.h
src/: find_image_rot.cc  hello-gtsam.cc  hello-opencv.cc
src/utils/: CvPlottingUtils.cc  CvPlottingUtils.h  TermColor.h
unittests/: sampletest.cc  sampletest_gtsam_way.cc
